<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_nav_cpp</name>
  <version>0.3.4</version>
  <description>
    Running navigation algorithms such as (Kalman filters), control, etc. on the turtlesim.
  </description>
  <license>albaalia@live.com</license>

  <maintainer email="albaalia@live.com">Amro Al-Baali</maintainer>
  <author email="albaalia@live.com">Amro Al-Baali</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
